S52.h

// global parameter for mariners' selection
typedef enum S52MarinerParameter {
    S52_MAR_ERROR               =  0,   //

    S52_MAR_SHOW_TEXT           =  1,   // flags to show text (see S52_setTextDisp() for details) (on/off) [default ON]
    S52_MAR_TWO_SHADES          =  2,   // flag indicating selection of two depth shades (on/off) [default ON]
    S52_MAR_SAFETY_CONTOUR      =  3,   // S52_LINES: selected safety contour (meters) [IMO PS 3.6]
    S52_MAR_SAFETY_DEPTH        =  4,   // S52_POINT: selected safety depth (for sounding color) (meters) [IMO PS 3.7]
    S52_MAR_SHALLOW_CONTOUR     =  5,   // S52_AREAS: selected shallow water contour (meters) (optional) [OFF==S52_MAR_TWO_SHADES]
    S52_MAR_DEEP_CONTOUR        =  6,   // S52_AREAS: selected deepwater contour (meters) (optional)
    S52_MAR_SHALLOW_PATTERN     =  7,   // flag indicating selection of shallow water highlight (on/off)(optional) [default OFF]
    S52_MAR_SHIPS_OUTLINE       =  8,   // flag indicating selection of ship scale symbol (on/off) [IMO PS 8.4]
    S52_MAR_DISTANCE_TAGS       =  9,   // NOT IMPLEMENTED: selected spacing of "distance to run" tags at a route (nm) [default 0.0 - OFF]
    S52_MAR_TIME_TAGS           = 10,   // NOT IMPLEMENTED: selected spacing of time tags at the past track (min)
    S52_MAR_FULL_SECTORS        = 11,   // show full length light sector lines (on/off) [default ON]
    S52_MAR_SYMBOLIZED_BND      = 12,   // symbolized area boundaries (on/off) [default ON]
    S52_MAR_SYMPLIFIED_PNT      = 13,   // simplified point (on/off) [default ON]
    S52_MAR_DISP_CATEGORY       = 14,   // display category (see [1] bellow)
    S52_MAR_COLOR_PALETTE       = 15,   // color palette  (0 - DAY_BRIGHT, 1 - DAY_BLACKBACK, 2 - DAY_WHITEBACK, 3 - DUSK, 4 - NIGHT)
                                        // (call S52_getPalettesNameList() to get the current palette list)

    S52_MAR_VECPER              = 16,   // vecper: OWNSHP & VESSEL: Vector-length time-period (min) (normaly 6 or 12)
    S52_MAR_VECMRK              = 17,   // vecmrk: OWNSHP & VESSEL: Vector time-mark interval (0 - none, 1 - 1&6 min, 2 - 6 min)
    S52_MAR_VECSTB              = 18,   // vecstb: OWNSHP         : Vector Stabilization (0 - none, 1 - ground, 2 - water)

    S52_MAR_HEADNG_LINE         = 19,   // OWNSHP & VESSEL: show heading line (on/off)
    S52_MAR_BEAM_BRG_NM         = 20,   // OWNSHP         : beam bearing length (nm) (0 - off)



    //---- experimental variables ----

    S52_MAR_FONT_SOUNDG         = 21,   // NOT IMPLEMENTED: use font for sounding (on/off)

    S52_MAR_DATUM_OFFSET        = 22,   // value of chart datum offset. FIXME: 2 datum: sounding / vertical (ex bridge clearance)

    S52_MAR_SCAMIN              = 23,   // flag for using SCAMIN filter (on/off) (default ON)

    S52_MAR_ANTIALIAS           = 24,   // flag for color blending (anti-aliasing) (on/off)

    S52_MAR_QUAPNT01            = 25,   // display QUAPNT01 (quality of position symbol) (on/off) (default on)

    S52_MAR_DISP_OVERLAP        = 26,   // display cells, overlapping layer (debug)

    S52_MAR_DISP_LAYER_LAST     = 27,   // enable S52_drawLast (see [1] bellow)

    S52_MAR_ROT_BUOY_LIGHT      = 28,   // rotate buoy light (deg from north)

    S52_MAR_DISP_CRSR_PICK      = 29,   // 0 - off, 1 - pick/highlight top object, 2 - pick stack/highlight top,
                                        // 3 - pick stack+ASSOC/highlight ASSOC (compiled with -DS52_USE_C_AGGR_C_ASSO)
    // those 3 are in S52 specs
    S52_MAR_DISP_GRATICULE      = 30,   // display graticule (on/off)
    S52_MAR_DISP_WHOLIN         = 31,   // wholin auto placement: 0 - off, 1 - wholin, 2 - arc, 3 - wholin + arc  (default off)
    S52_MAR_DISP_LEGEND         = 32,   // display legend (on/off) (default off)

    S52_CMD_WRD_FILTER          = 33,   // toggle command word filter mask for profiling (see [3] bellow)

    S52_MAR_DOTPITCH_MM_X       = 34,   // dotpitch X (mm) - pixel size in X
    S52_MAR_DOTPITCH_MM_Y       = 35,   // dotpitch Y (mm) - pixel size in Y

    // in S52 specs
    S52_MAR_DISP_CALIB          = 36,   // display calibration symbol (on/off) (default off)

    S52_MAR_DISP_DRGARE_PATTERN = 37,   // display DRGARE pattern (on/off) (default on)

    S52_MAR_DISP_NODATA_LAYER   = 38,   // display NODATA layer 0 (on/off) (default on)

    S52_MAR_DISP_VESSEL_DELAY   = 39,   // time delay (sec) defore deleting old AIS (default 0 - OFF)

    S52_MAR_DISP_AFTERGLOW      = 40,   // display synthetic afterglow (in PLAUX_00.DAI) for OWNSHP & VESSEL (on/off)

    S52_MAR_DISP_CENTROIDS      = 41,   // display all centered symb of one area (on/off) (default off)

    S52_MAR_DISP_WORLD          = 42,   // display World - TM_WORLD_BORDERS_SIMPL-0.2.shp - (on/off) (default off)

    S52_MAR_DISP_RND_LN_END     = 43,   // display rounded line segment ending (on/off)

    S52_MAR_DISP_VRMEBL_LABEL   = 44,   // display bearing / range label on VRMEBL (on/off)

    S52_MAR_DISP_RADAR_LAYER    = 45,   // display Raster: RADAR, Bathy, ... (on/off) (default off)

    // FIXME: DISP TEXT SHADOW - 0-7 bit: N NE E SE S SW W NW, 0 - off, [default to SE for now]

    S52_MAR_GUARDZONE_BEAM      = 46,   // Danger/Indication Highlight used by LEGLIN&Position  (meters) [0.0 - off]
    S52_MAR_GUARDZONE_LENGTH    = 47,   // Danger/Indication Highlight used by Position (meters, user computed from speed/time or distance)
    S52_MAR_GUARDZONE_ALARM     = 48,   // FIXME: 1&2 ON at the same time. 0 - no error, 1 - alarm, 2 - indication
                                        // -1 - display highlight

    S52_MAR_DISP_HODATA_UNION   = 49,   // When CATEGORY_SELECT: 0 - union HO data limit "m_covr" (default), 1 - all HO data limit "M_COVR+m_covr" (debug)
                                        // Note: m_covr:BASE, M_COVR:OTHER
    S52_MAR_DISP_SCLBDY_UNION   = 50,   // When CATEGORY_SELECT: 0 - scldbU, union Scale Boundary (default), 1 - sclbdy, all Scale Boundary (debug)
                                        // Note: sclbdU:STD, sclbdy:STD

    S52_MAR_NUM                 = 51    // number of parameters
} S52MarinerParameter;
DLL const char * STD S52_version(void);
/**
 * S52_getMarinerParam:
 * @paramID: (in): ID of Mariners' Parameter
 *
 * Get the value of the Mariners' Parameter @paramID (global variables/system wide)
 *
 * Invalid @paramID will return the value of S52_MAR_ERROR
 *
 *
 * Return: value
 */
DLL double STD S52_getMarinerParam(S52MarinerParameter paramID);
/**
 * S52_setMarinerParam:
 * @paramID: (in): ID of Mariners' Parameter
 * @val:     (in): value
 *
 * Note: S52_MAR_DISP_CATEGORY, S52_MAR_DISP_LAYER_LAST, S52_CMD_WRD_FILTER,
 * XOR the value of the global variables @paramID
 *
 *
 * Return: TRUE on success, else FALSE
 */
DLL int    STD S52_setMarinerParam(S52MarinerParameter paramID, double val);
//
//----- All call bellow need S52_init() first ----------------
//

//----- need a GL context / config event (main loop) --------

/**
 * S52_draw:
 *
 * Draw S57 object (cell) on layer 0-8
 *
 * Note: call will fail if no ENC loaded (via S52_loadCell)
 * Note: Interrupt 2 (ANSI) - user press Ctrl-C to stop long running process
 *
 * WARNING: At startup, this call must be the very first draw call to set projection
 *
 *
 * Return: TRUE on success, else FALSE
 */
DLL int    STD S52_draw(void);
/**
 * S52_pickAt: Cursor pick
 * @pixels_x: (in): origin LL corner
 * @pixels_y: (in): origin LL corner
 *
 *
 * Note:
 *  - in the next frame, the object is drawn with the "DNGHL" color (experimental))
 *  - using 'double' instead of 'unsigned int' because X11 handle mouse in 'double'.
 *
 * Note: call will fail if no ENC loaded (via S52_loadCell)
 *
 *
 * Return: (transfer none): string '<name>:<S57ID>' or if relationship existe
 * '<name>:<S57ID>:<relationS57IDa>,<S57IDa>,...:<relationS57IDb>,<S57IDb>,...'
 * of the S57 object, else NULL
 */
DLL const char * STD S52_pickAt(double pixels_x, double pixels_y);
// --------------


/**
 * S52_init:
 * @screen_pixels_w: (in): use to compute DOTPITCH_X (px)
 * @screen_pixels_h: (in): use to compute DOTPITCH_Y (px)
 * @screen_mm_w:     (in): use to compute DOTPITCH_X (mm)
 * @screen_mm_h:     (in): use to compute DOTPITCH_Y (mm)
 * @log_cb:          (scope call) (allow-none): log callback
 *
 * Initialize libS52, install SIGINT handler to abort drawing (Ctrl-C)
 * xrandr can be used if framework doesn't do it (ie Clutter)
 *
 * Note: the ratio screen mmw/w and screen mm_h/h is used to compute initial DOTPITCH,
 *       overide with S52_MAR_DOTPITCH_MM_X/Y after init().
 *
 * Note: screen_pixels_w, int screen_pixels_h are used to setViewPort to full-screen
 *
 *
 * Return: TRUE on success, else FALSE
 */
typedef int (*S52_log_cb)(const char *str);
DLL int    STD S52_init(int screen_pixels_w, int screen_pixels_h, int screen_mm_w, int screen_mm_h, S52_log_cb log_cb);
/**
 * S52_done:
 *
 * Free up all ressources
 *
 *
 * Return: TRUE on success, else FALSE
 */
DLL int    STD S52_done(void);
/**
 * S52_loadObject_cb:
 * @objname: (in): name of S57 object (same as layer name)
 * @feature: (in): S57 object feature passed from GDAL/OGR (OGRFeatureH)
 *
 * This callback provide a way to manipulate each S57 object before
 * they are inserted into the scenegraph (via S52_loadObject())
 *
 *
 * Return: TRUE on success, else FALSE
 */
typedef int (*S52_loadObject_cb)(const char *objname, /* OGRFeatureH */ void *feature);
/**
 * S52_loadCell:
 * @encPath:       (allow-none):
 * @loadObject_cb: (allow-none) (scope call):
 *
 * if @encPath is NULL look for label 'CHART' in s52.cfg
 * if @encPath is a path load all S57 base cell + update
 * if @loadObject_cb is NULL then S52_loadObject() is executed
 *
 * Note: the first call to S52_loadCell() will set the Mercator Projection Latitude
 *       and Longitude of any futher S52_loadCell() call(s)
 * Note: Interrupt 2 (ANSI) - user press Ctrl-C to stop long running process
 *       (if compiled with S52_USE_SUPP_LINE_OVERLAP and/or S52_USE_C_AGGR_C_ASSO,
 *        analysis can be expensive in large ENC)
 *
 * Return: TRUE on success, else FALSE
 */
DLL int    STD S52_loadCell(const char *encPath,  S52_loadObject_cb loadObject_cb);
// ---- CHART LOADING (cell) -------------------------------------------


/**
 * S52_setViewPort:
 * @pixels_x:      (in): origine LL corner
 * @pixels_y:      (in): origine LL corner
 * @pixels_width:  (in): viewport width in pixels
 * @pixels_height: (in): viewport height in pixels
 *
 *  Call this if viewPort change (ex: going full screen)
 *  From WebGL (OpenGL ES 2.0) spec:
 *  Rationale: automatically setting the viewport will interfere with applications
 *   that set it manually. Applications are expected to use onresize handlers to
 *   respond to changes in size of the canvas and set the OpenGL viewport in turn.
 *
 * Use this call in conjuction with S52_setView() and S52_draw() to setup a magnifying glass
 * or an overview
 *
 *
 * Return: TRUE on success, else FALSE
 */
DLL int    STD S52_setViewPort(int pixels_x, int pixels_y, int pixels_width, int pixels_height);
/**
 * S52_setView:
 * @cLat:  (in): latitude of the center of the view (deg)  [- 90 .. + 90]
 * @cLon:  (in): longitude of the center of the view (deg) [-180 .. +180]
 * @rNM:   (in): range (radius of view (NM), <0 unchange
 * @north: (in): angle from north (deg),     <0 unchange
 *
 * Set center of view / where to place the camera on model
 *
 *
 * Return: TRUE on success, else FALSE
 */
DLL int    STD S52_setView(double  cLat, double  cLon, double  rNM, double  north);
/**
 * S52_getCellExtent:
 * @filename: (in)  (allow-none)   :
 * @S:        (out) (transfer full): latitude  (deg)
 * @W:        (out) (transfer full): longitude (deg)
 * @N:        (out) (transfer full): latitude  (deg)
 * @E:        (out) (transfer full): longitude (deg)
 *
 * Cell extent; South, West, North, East
 * if @filename is NULL then return the extent of all cells loaded
 *
 *
 * Return: TRUE on success, else FALSE
 */
DLL int    STD S52_getCellExtent(const char *filename, double *S, double *W, double *N, double *E);